--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,31 @@
 .stats:last-child {
 	float: right;
 }
+
+
+#header {
+	width: 100%;
+	height: 90px;
+	background: orange;
+}
+
+.menu li {
+	float: left;
+	list-style: none;
+	padding-right: 4%;
+}
+.menu a {
+	text-decoration: none;
+	padding: 5px 10px;
+	line-height: 90px;
+	-webkit-border-radius: 45px;
+	      border-radius: 45px;
+	background-clip: padding-box;
+	background-color: #df8b1a;
+	border: 2px solid #333;
+}
+.menu a.selected {
+	background: #8f7f14;
+	color: white;
+	cursor: default;
+}
